kubernetes/apps/external/portfolio/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - name: http
      protocol: TCP
      port: 80
