kubernetes/apps/external/portfolio/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio
spec:
  parentRefs:
  - name: external
  hostnames:
  - "portfolio.sluxcloud.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: portfolio
      port: 80
